# mask-fp

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/mask_fp/: __init__.py  mask.py  set_return_annotations.py
src/mask_fp/type/: __init__.py  types.py
test/: test_mask.py
