[project]
name = "mask-fp"
version = "0.1.0"
description = ""
authors = [
    {name = "A-4S",email = "dev.forsythe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pipe-fp (>=1.1.7,<2.0.0)",
]

[tool.poetry]
packages = [{include = "mask_fp", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
